<resources>
    <string name="app_name">PhoneBook</string>
    <string name="title_activity_main">Kontakty</string>
    <string name="search">Szukaj</string>
    <string name="title_activity_add_contact" />
    <string name="name">Imię:</string>
    <string name="surname">Nazwisko:</string>
    <string name="email">Adres e-mail:</string>
    <string name="phonenumber">Numer tel.:</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="woman">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="gender">Płeć:</string>
    <string name="call">Zadzwoń</string>
    <string name="premissions_to_call">Uprawnienia do dzwonienia nie zostały przyznane!</string>
    <string name="loading_error">Błąd wczytywania</string>
    <string name="cannot_be_empty">Pole nie może być puste!</string>
    <string name="choice_only_one">Wybierz prawidłową płeć</string>
    <string name="Woman">Kobieta</string>
    <string name="Man">Mężczyzna</string>
    <string name="something_went_wrong">Coś poszło nie tak</string>
    <string name="image_not_choiced">Nie wybrano obrazu</string>
    <string name="choice_a_photo">Wybierz zdjęcie</string>
    <string name="new_contact">Nowy kontakt</string>
    <string name="nothing_found">Nic nie znaleziono</string>
    <string name="contact_added">Kontakt dodano</string>

</resources>
