<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddContactActivity"
    tools:showIn="@layout/activity_add_contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/item_background"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:inputType="textPersonName|textCapWords"
            android:padding="4dp"
            android:textSize="26sp"
            tools:text="Damian" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/surname"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addSurnameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:inputType="textPersonName|textCapWords"
            android:padding="4dp"
            android:textSize="26sp"
            tools:text="Radecki" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/email"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addEmailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:inputType="textEmailAddress"
            android:padding="4dp"
            android:textSize="26sp"
            tools:text="damianradecki97@gmail.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/phonenumber"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addPhoneTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:inputType="phone"
            android:padding="4dp"
            android:textSize="26sp"
            tools:text="533 252 518" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/gender"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWoman"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                android:textSize="20sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMan"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:textSize="20sp" />

        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>