<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ShowContactActivity"
    tools:showIn="@layout/activity_show_contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/item_background"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            tools:text="Damian" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/surname"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/surnameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            tools:text="Radecki" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="damianradecki97@gmail.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="4dp"
            android:text="@string/phonenumber"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phoneNrTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            tools:text="533 252 518" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/gender"
            android:padding="4dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genderTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="Mężczyzna" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>